--- a/support-revisionism.html
+++ b/support-revisionism.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="header">
-	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/images/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a>
+	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a>
 </header>
 <main class="container-fluid">
 	<div class="row">
